# sql_executor

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: clickhouse_connector.h  common.h  postgres_connector.h
src/: clickhouse_connector.cpp  clickhouse_connector.h  common.h  postgres_connector.cpp  postgres_connector.h  python_bindings.cpp
tests/: test_clickhouse_connector.cpp  test_common.cpp  test_postgres_connector.cpp
